--- a/templates/backOffice/default/team.html
+++ b/templates/backOffice/default/team.html
@@ -22,6 +22,39 @@
 
     <!-- Team list -->
     <div class="general-block-decorator">
+        <div class="row inner-toolbar">
+            <div class="col-md-3 inner-actions">
+                {if $hide_flags != true}
+                    <ul class="nav nav-pills">
+                        {loop name="lang_list" type="lang"}
+                            <li {if $ID == $edit_language_id}class="active"{/if}>
+                                {if $current_tab}
+                                    {$lang_url = {url path={$page_url|default:$current_url nofilter} edit_language_id=$ID current_tab=$current_tab}}
+                                {else}
+                                    {$lang_url = {url path={$page_url|default:$current_url nofilter} edit_language_id=$ID}}
+                                {/if}
+                                <a class="language-change-button" data-language-id="{$ID}" href="{$lang_url nofilter}"
+                                   title="{intl l='Edit information in %lng' lng={$TITLE}}">
+                                    <img src="{image file="assets/img/flags/$CODE.png"}" alt=$TITLE/>
+                                </a>
+                            </li>
+                        {/loop}
+                    </ul>
+                {/if}
+            </div>
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-6 inner-actions text-right">
+                {loop name="auth-create" type="auth" role="ADMIN" resource="admin.module" access="CREATE" module="Dealer"}
+                    <div class="pull-right">
+                        <a class="btn btn-default btn-primary" title="{intl l='Create a new Team' d='team.bo.default'}"
+                           data-target="#team-create" data-toggle="modal">
+                            <i class="glyphicon glyphicon-plus-sign"></i>
+                        </a>
+                    </div>
+                {/loop}
+            </div>
+        </div>
       {ifloop rel="team"}
         <div class="panel-group" id="teams" role="tablist" aria-multiselectable="true">
           {loop type="team" name="team"}
