--- a/templates/backOffice/default/team.html
+++ b/templates/backOffice/default/team.html
@@ -69,7 +69,7 @@
                                             <a class="btn btn-default btn-xs team-update"
                                                title="{intl l='Modify this Team' d='team.bo.default'}"
                                                data-target="#team-update" data-toggle="modal" data-id="{$ID}"
-                                               data-label="{$TITLE}">
+                                               data-title="{$TITLE}">
                                                 <i class="glyphicon glyphicon-edit"></i>
                                             </a>
                                         {/loop}
