--- a/templates/backOffice/default/includes/single-person.html
+++ b/templates/backOffice/default/includes/single-person.html
@@ -1,4 +1,5 @@
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-    <h3>{$FIRST_NAME} {$LAST_NAME}</h3>
-    <p><small>{$DESCRIPTION}</small></p>
+    <div class="well text-center">
+        <h3 class="text-center">{$FIRST_NAME} {$LAST_NAME}</h3>
+    </div>
 </div>
