--- a/templates/backOffice/default/includes/single-person.html
+++ b/templates/backOffice/default/includes/single-person.html
@@ -1,5 +1,20 @@
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
     <div class="well text-center">
+        <div class="pull-right">
+            {loop name="auth-edit" type="auth" role="ADMIN" resource="admin.module" access="UPDATE" module="Team"}
+                <a class="btn btn-default btn-xs"
+                   title="{intl l='Modify this Person' d='team.bo.default'}">
+                    <i class="glyphicon glyphicon-edit"></i>
+                </a>
+            {/loop}
+            {loop name="auth-delete" type="auth" role="ADMIN" resource="admin.module" access="DELETE" module="Team"}
+                <a class="btn btn-default btn-xs person-delete"
+                   title="{intl l='Delete this Person' d='team.bo.default'}"
+                   data-target="#person-delete" data-toggle="modal" data-id="{$ID}">
+                    <i class="glyphicon glyphicon-trash"></i>
+                </a>
+            {/loop}
+        </div>
         <h3 class="text-center">{$FIRST_NAME} {$LAST_NAME}</h3>
     </div>
 </div>
