--- a/templates/backOffice/default/team.html
+++ b/templates/backOffice/default/team.html
@@ -99,7 +99,7 @@
                                  role="tabpanel"
                                  aria-labelledby="heading-{$ID}">
                                 <div class="panel-body">
-                                   {include file="person.html"}
+                                   {include file="includes/person.html"}
                                 </div>
                             </div>
                         </div>
