--- a/templates/backOffice/default/form/person-create.html
+++ b/templates/backOffice/default/form/person-create.html
@@ -44,13 +44,9 @@
             {intl l=$label d="team.bo.default"}
             {if $required}<span class="required">*</span>{/if}
         </label>
-
         {form_error form=$form field="description"}{$message}{/form_error}
-
         <textarea class="form-control" name="{$name}" id="{$label_attr.for}"
-                  placeholder="{intl l='The Person Description' d="team.bo.default"}">
-      {$DESCRIPTION nofilter}
-      </textarea>
+                  placeholder="{intl l='The Person Description' d="team.bo.default"}">{$DESCRIPTION nofilter}</textarea>
     </div>
 {/form_field}
 {/form}
