fix position update

--- a/templates/backOffice/default/includes/single-person.html
+++ b/templates/backOffice/default/includes/single-person.html
@@ -17,7 +17,7 @@
             {/loop}
         </div>
         {ifloop rel="image"}
-        {loop type="image" name="image" source="person" source_id=$ID query_namespace="Team\\Model" widht=200 height=100 backend_context="on" resize_mode="borders"}
+        {loop type="image" name="image" source="person" source_id=$ID query_namespace="Team\\Model" widht=200 height=100 backend_context="on" resize_mode="borders" limit=1}
         {if $PROCESSING_ERROR}
             <img src="//placehold.it/200x100&text={intl l='Image+file+not+found'}" alt="{$TITLE}" class="center-block img-responsive">
         {else}
