--- a/templates/backOffice/default/person-edit.html
+++ b/templates/backOffice/default/person-edit.html
@@ -42,6 +42,7 @@
                         {include file="custom/image-upload-form.html" imageType="person" parentId=$person_id}
                     </div>
                     <div class="tab-pane fade" id="fonction">
+                        {include file="includes/function.html" person_id=$person_id}
                     </div>
                     {forhook rel="team.additional"}
                         <div class="tab-pane fade" id="{$id}">
