prepare link function

--- a/templates/backOffice/default/includes/function.html
+++ b/templates/backOffice/default/includes/function.html
@@ -1,12 +1,15 @@
 <br>
 <div class="row">
     <div class="col-md-12">
-        {form name="person.update"}
+        <h3>{intl l="Create a function" d="team.bo.default"}</h3>
+        {form name="person_function.create"}
             <div class="form-container">
                 {if $form_error}
                     <div class="alert alert-danger">{$form_error_message}</div>
                 {/if}
-                <form method="POST" action="{url path="/admin/module/Team/function" person_id=$person_id}" {form_enctype form=$form} class="clearfix form-inline">
+                <form method="POST"
+                      action="{url path="/admin/module/Team/function" person_id=$person_id}" {form_enctype form=$form}
+                      class="clearfix form-inline">
                     {loop name="person_update" type="person" backend_context="yes" id=$person_id lang=$edit_language_id}
                         <div class="row">
                             <div class="col-md-12">
@@ -20,10 +23,28 @@
         {/form}
     </div>
 </div>
+<br>
 <div class="row">
     <div class="col-sm-12">
-        {loop type="person_function" name="function"}
-            {$CODE} {$LABEL}
-        {/loop}
+        <h3>{intl l="Add a function to this person" d="team.bo.default"}</h3>
+        {form name="person_function.link"}
+        <form method="POST"
+              action="{url path="/admin/module/Team/function/link" person_id=$person_id}" {form_enctype form=$form}
+              class="clearfix form-inline">
+            {form_hidden_fields form=$form}
+            {render_form_field form=$form field="success_url" value={url path="/admin/module/Team/person/update" person_id=$person_id}}
+            {form_field form=$form field="person"}
+                <input type="hidden" id="{$label_attr.for}" name="{$name}" value="{$person_id}"/>
+            {/form_field}
+            {form_field form=$form field="function"}
+            <select class="form-control" name="{$name}">
+                {loop type="person_function" name="function"}
+                    <option value="{$ID}">{$LABEL}</option>
+                {/loop}
+            </select>
+            {/form_field}
+            <button type="submit" class="btn btn-primary">{intl l="Add"}</button>
+            {/form}
+        </form>
     </div>
 </div>
