Translate main page

--- a/templates/backOffice/default/modal/team.html
+++ b/templates/backOffice/default/modal/team.html
@@ -49,7 +49,7 @@ form_enctype       = {form_enctype form=$form}
 {include file="includes/generic-confirm-dialog.html"
 
 dialog_id       = "team-delete"
-dialog_title    = {intl l="Delete an entry of Team" d="team.bo.default"}
+dialog_title    = {intl l="Delete a Team" d="team.bo.default"}
 dialog_message  = {$smarty.capture.team_delete nofilter}
 
 dialog_ok_label     = {intl l="Delete"}
