--- a/templates/backOffice/default/modal/person.html
+++ b/templates/backOffice/default/modal/person.html
@@ -27,7 +27,7 @@ form_enctype       = {form_enctype form=$form}
 {include file="includes/generic-confirm-dialog.html"
 
 dialog_id       = "person-delete"
-dialog_title    = {intl l="Delete an entry of Team" d="team.bo.default"}
+dialog_title    = {intl l="Delete a Person" d="team.bo.default"}
 dialog_message  = {$smarty.capture.person_delete nofilter}
 
 dialog_ok_label     = {intl l="Delete"}
