Translate edition interface

--- a/templates/backOffice/default/person-edit.html
+++ b/templates/backOffice/default/person-edit.html
@@ -55,7 +55,7 @@
                         {/ifhook}
                         {elsehook rel="team.extra.content.edit"}
                             <div class="alert alert-info">
-                                {intl l="There is no additionnal content for this Team" d="team.bo.default"}
+                                {intl l="There is no additionnal content for this Person" d="team.bo.default"}
                             </div>
                         {/elsehook}
                     </div>
