--- a/templates/backOffice/default/custom/image-upload-list-ajax.html
+++ b/templates/backOffice/default/custom/image-upload-list-ajax.html
@@ -24,7 +24,7 @@ Parameters:
                 </a>
 
                 <div class="btn-group" >
-                    <a class="image-update-btn btn btn-default btn-xs disabled js-sorted-position" href="#">{$POSITION}</a>
+                    <a class="image-update-btn btn btn-default btn-xs disabled js-sorted-position" href="#">{$POSITION|default:0}</a>
                     {loop type="auth" name="can_change" role="ADMIN" resource="{$resource|default:"admin.$imageType"}" access="UPDATE"}
                     <a class="image-toggle-btn btn btn-default btn-xs {if $VISIBLE}visibility-visible{/if}" href="{url path="/admin/Team/image/type/person/%id/toggle" image=$imageType id=$ID}" data-error-message="{intl l='Please retry'}">
                         <i class="glyphicon glyphicon-eye-open"></i><i class="glyphicon glyphicon-eye-close"></i>
