hide function linked if no function are linked

--- a/templates/backOffice/default/includes/function.html
+++ b/templates/backOffice/default/includes/function.html
@@ -48,6 +48,7 @@
             </form>
         </div>
     </div>
+    {ifloop rel="function"}
     <div class="col-sm-6">
         <div class="well">
             <h3>{intl l="Function link to this Person" d="team.bo.default"}</h3>
@@ -63,4 +64,5 @@
             </ul>
         </div>
     </div>
+    {/ifloop}
 </div>
